@startuml

title __ANSWER's Class Diagram__\n

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace service {
        namespace answer {
          abstract class com.upf.nli.analyzer.semantic_analyzer.service.answer.Answer {
              {abstract} + runQuery()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace service {
        namespace answer {
          class com.upf.nli.analyzer.semantic_analyzer.service.answer.CourseAnswer {
              + CourseAnswer()
              + runQuery()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace service {
        namespace answer {
          class com.upf.nli.analyzer.semantic_analyzer.service.answer.LibraryAnswer {
              - END : String
              - LOCATION : String
              - NAME : String
              - SERVICES : String
              - START : String
              + LibraryAnswer()
              + runQuery()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace service {
        namespace answer {
          class com.upf.nli.analyzer.semantic_analyzer.service.answer.ProgrammeAnswer {
              + ProgrammeAnswer()
              + runQuery()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace service {
        namespace answer {
          class com.upf.nli.analyzer.semantic_analyzer.service.answer.TeacherAnswer {
              + TeacherAnswer()
              + runQuery()
          }
        }
      }
    }
  }
  

  com.upf.nli.analyzer.semantic_analyzer.service.answer.CourseAnswer -up-|> com.upf.nli.analyzer.semantic_analyzer.service.answer.Answer
  com.upf.nli.analyzer.semantic_analyzer.service.answer.CourseAnswer o-- com.upf.nli.analyzer.semantic_analyzer.repository.semantic.CourseRepository : courseRepository
  com.upf.nli.analyzer.semantic_analyzer.service.answer.LibraryAnswer -up-|> com.upf.nli.analyzer.semantic_analyzer.service.answer.Answer
  com.upf.nli.analyzer.semantic_analyzer.service.answer.LibraryAnswer o-- com.upf.nli.analyzer.semantic_analyzer.repository.semantic.LibraryRepository : libraryRepository
  com.upf.nli.analyzer.semantic_analyzer.service.answer.ProgrammeAnswer -up-|> com.upf.nli.analyzer.semantic_analyzer.service.answer.Answer
  com.upf.nli.analyzer.semantic_analyzer.service.answer.ProgrammeAnswer o-- com.upf.nli.analyzer.semantic_analyzer.repository.semantic.ProgrammeRepository : programmeRepository
  com.upf.nli.analyzer.semantic_analyzer.service.answer.TeacherAnswer -up-|> com.upf.nli.analyzer.semantic_analyzer.service.answer.Answer
  com.upf.nli.analyzer.semantic_analyzer.service.answer.TeacherAnswer o-- com.upf.nli.analyzer.semantic_analyzer.repository.semantic.CourseRepository : courseRepository
  com.upf.nli.analyzer.semantic_analyzer.service.answer.TeacherAnswer o-- com.upf.nli.analyzer.semantic_analyzer.repository.semantic.TeacherRepository : teacherRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
